--- a/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
+++ b/Eka's Secret Stash/GUI/Aardvark_Project/app/src/main/res/layout/content_main.xml
@@ -27,6 +27,7 @@
         android:contentDescription="Search"
         android:ems="10"
         android:inputType="textPersonName"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
